Update control panel shortcuts for toggling hidden files and cycling preview detail

--- a/static/index.html
+++ b/static/index.html
@@ -183,7 +183,8 @@
             <div class="control-line">R → Refresh</div>
             <div class="control-line">P → Stop Media</div>
             <div class="control-line">F → Toggle Favourite</div>
-            <div class="control-line">. → Show/Hide Dotfiles</div>
+            <div class="control-line">V → Toggle Hidden Files (Stops Media)</div>
+            <div class="control-line">. → Cycle Preview Detail</div>
         </div>
         
         <div id="crosshair"></div>
