Add LICENSE and README files; enhance media playback controls and UI instructions

--- a/static/index.html
+++ b/static/index.html
@@ -182,9 +182,11 @@
             <div class="control-line">H → Home Directory</div>
             <div class="control-line">R → Refresh</div>
             <div class="control-line">P → Stop Media</div>
+            <div class="control-line">ENTER → Pause / Resume Media</div>
             <div class="control-line">F → Toggle Favourite</div>
             <div class="control-line">V → Toggle Hidden Files (Stops Media)</div>
             <div class="control-line">. → Cycle Preview Detail</div>
+            <div class="control-line">[ / ] → Skip Media ±10s (Hold SHIFT for ±60s)</div>
         </div>
         
         <div id="crosshair"></div>
