Add control instruction for media preview focus on right click

--- a/static/index.html
+++ b/static/index.html
@@ -178,6 +178,7 @@
             <div class="control-line">SHIFT → Precision Throttle</div>
             <div class="control-line">C → Level Horizon</div>
             <div class="control-line">CLICK → Enter Directory</div>
+            <div class="control-line">RIGHT CLICK → Focus Preview (Hold 2s to open media)</div>
             <div class="control-line">BACKSPACE → Parent Dir</div>
             <div class="control-line">H → Home Directory</div>
             <div class="control-line">R → Refresh</div>
