Add sorting functionality and update controls for Go To modal

--- a/static/index.html
+++ b/static/index.html
@@ -302,8 +302,10 @@
             <div class="control-line">V → Toggle Hidden Files (Stops Media)</div>
             <div class="control-line">. → Cycle Preview Detail</div>
             <div class="control-line">[ / ] → Skip Media ±10s (Hold SHIFT for ±60s)</div>
-            <div class="control-line">G → Open Go To Modal</div>
+            <div class="control-line">/ → Open Go To Modal</div>
             <div class="control-line">N / SHIFT+N → Cycle Go To Results</div>
+            <div class="control-line">O → Cycle Sort (Name / Date / Size / Natural)</div>
+            <div class="control-line">SHIFT+O → Reverse Sort Order</div>
         </div>
         
         <div id="crosshair"></div>
