Enhance pointer cursor visibility by updating styles and adding cursor management

--- a/static/index.html
+++ b/static/index.html
@@ -21,6 +21,10 @@
             overflow: hidden;
             cursor: none;
         }
+
+        body.pointer-visible {
+            cursor: default;
+        }
         
         canvas {
             display: block;
